--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,11 +1,12 @@
+# Configuración de Prometheus
 global:
-  scrape_interval: 15s
+  scrape_interval: 15s  # Intervalo global para la recolección de métricas. Prometheus recogerá métricas cada 15 segundos.
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: 'prometheus'  # Nombre del trabajo de scraping para Prometheus.
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['localhost:9090']  # Define los objetivos de scraping. En este caso, Prometheus se monitorea a sí mismo en el puerto 9090.
 
-  - job_name: 'cadvisor'
+  - job_name: 'cadvisor'  # Nombre del trabajo de scraping para cAdvisor.
     static_configs:
-      - targets: ['cadvisor:8080']
+      - targets: ['cadvisor:8080']  # Define los objetivos de scraping. Aquí, cAdvisor se monitorea en el puerto 8080 del contenedor `cadvisor`.
